repl — sandbox filesystem isolation: working directory + denyFileSystemAccess
Two layers of defense closing the "can a JShell snippet read /etc/passwd?"
gap. Defaults are now safe out of the box; deployers can opt out per
layer when their workload needs raw filesystem access.

Layer 1 — JvmSandbox working directory

ProcessBuilder previously launched the subprocess with no .directory()
call, so the JShell JVM inherited the host JVM's cwd. Relative-path file
ops (new File("data.csv")) resolved into whatever workspace the
deployer's service happened to be running from.

Now JvmSandbox.create resolves an effective cwd: if the caller pinned
one via JvmSandboxConfig.withWorkingDirectory(Path), use it verbatim
and leave it alone on close (caller-owned lifecycle); otherwise create
a per-session helios-sandbox-cwd-* temp dir, set it on
ProcessBuilder.directory(), and recursively delete it (with its
contents) on close(). Symlinks are not followed during cleanup so a
snippet that managed to symlink / leak from inside can't trick host
cleanup into walking the root filesystem.

JvmSandboxConfig gains a workingDirectory component. Breaking for direct
canonical-constructor callers; Builder callers unaffected.

Layer 2 — SandboxPolicy.denyFileSystemAccess

cwd containment is necessary but not sufficient — absolute paths bypass
cwd entirely. The L2 verifier already denied FileReader / FileWriter /
File*Stream / RandomAccessFile under noEgress(), but java.io.File
itself stayed callable: new File("/etc/passwd").exists() / .length() /
.listFiles() / .canRead() all returned data via JNI without ever
opening a stream, leaking filesystem metadata. java.nio.file.* was
denied only via the allow-list default-deny under noEgress, not by a
categorical flag.

New denyFileSystemAccess boolean on SandboxPolicy (8th record
component, behind the existing denyReflection / denyNativeAccess /
denyDynamicClassDefinition pattern). PolicyBytecodeVerifier's new
isFileSystemAccess rule denies:

  - java.n